<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_preview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profile_img_preview"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/blank_profile"
        app:civ_border_color="#d0d0d0"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#f0f0f0"
        app:civ_shadow_radius="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/friend_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="Robert"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_img_preview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />


</android.support.constraint.ConstraintLayout>